# goph420-w2024-midterm1-stAR

./: LICENSE  README.md  pyproject.toml
examples/: driver_question1.py  driver_question2.py
src/midterm1/: integration.py
