[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "midterm_1"
version = "0.0.1"
authors = [
{ name="Annika Richardson", email="annika.richardson@ucalgary.ca" },
]
description="Functions required to complete midterm 1"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: OSI Approved :: MIT",
]
[project.urls]
"Homepage" = "https://github.com/annika-rich/goph-420-midterm1-stAR"